@@ -1,18 +1,14 @@
 /*
- * Copyright © 2022 92AK
+ * Copyright © 2023 92AK
  */
 package com.ntak.pearlzip.ui.testfx;
 
 import com.ntak.pearlzip.archive.pub.FileInfo;
 import com.ntak.pearlzip.ui.constants.internal.InternalContextCache;
 import com.ntak.pearlzip.ui.util.AbstractPearlZipTestFX;
-import com.ntak.testfx.FormUtil;
-import javafx.geometry.Point2D;
-import javafx.scene.control.DialogPane;
-import javafx.scene.control.TableRow;
-import javafx.scene.control.TableView;
+import com.ntak.pearlzip.ui.util.PearlZipSpecifications;
+import javafx.scene.control.TableColumn;
 import javafx.scene.input.MouseButton;
-import javafx.stage.Stage;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
@@ -22,16 +18,13 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.Arrays;
 import java.util.concurrent.TimeUnit;
 
 import static com.ntak.pearlzip.ui.constants.ZipConstants.CK_RECENT_FILE;
 import static com.ntak.pearlzip.ui.util.PearlZipFXUtil.*;
-import static com.ntak.testfx.NativeFileChooserUtil.chooseFile;
-import static com.ntak.testfx.TestFXConstants.PLATFORM;
+import static com.ntak.testfx.TestFXConstants.LONG_PAUSE;
+import static com.ntak.testfx.specifications.CommonSpecifications.*;
 
 public class OpenArchiveTestFX extends AbstractPearlZipTestFX {
     /*
@@ -56,212 +49,302 @@ public class OpenArchiveTestFX extends AbstractPearlZipTestFX {
 
     @Test
     @DisplayName("Test: Open zip archive successfully (new window)")
-    public void testFX_OpenZipArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.zip")
+    // GIVEN zip archive (test.zip) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.zip) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenZipArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.zip")
                                   .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.zip")
+                                      .toAbsolutePath();
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open jar archive successfully (new window)")
-    public void testFX_OpenJarArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.jar")
+    // GIVEN zip archive (test.jar) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.jar) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenJarArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.jar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.jar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open 7z archive successfully (new window)")
-    public void testFX_Open7zArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.7z")
+    // GIVEN zip archive (test.7z) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.7z) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_Open7zArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.7z")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.7z")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open cab archive successfully (new window)")
-    public void testFX_OpenCabArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.cab")
+    // GIVEN zip archive (test.cab) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.cab) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenCabArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.cab")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.cab")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open iso archive successfully (new window)")
-    public void testFX_OpenIsoArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.iso")
+    // GIVEN zip archive (test.iso) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.iso) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenIsoArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.iso")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.iso")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open rar archive successfully (new window)")
-    public void testFX_OpenRarArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.iso")
+    // GIVEN zip archive (test.rar) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.rar) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenRarArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.rar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.rar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open tar archive successfully (new window)")
-    public void testFX_OpenTarArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar")
+    // GIVEN zip archive (test.tar) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.tar) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenTarArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open BZip archive successfully (new window)")
-    public void testFX_OpenBzipArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.bz2")
+    // GIVEN zip archive (test.tar.bz2) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.tar.bz2) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenBzipArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.bz2")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.bz2")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open GZip archive successfully (new window)")
-    public void testFX_OpenGzipArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.gz")
+    // GIVEN zip archive (test.tar.gz) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.tar.gz) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenGzipArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.gz")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.gz")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     @Test
     @DisplayName("Test: Open xz archive successfully (new window)")
-    public void testFX_OpenXZArchiveNewWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.xz")
+    // GIVEN zip archive (test.tar.xz) is open in PearlZip by System menu
+    // THEN ensure only 1 main stage instances are open
+    // GIVEN zip archive (test.tar.xz) is open in PearlZip by Main window
+    // THEN ensure only 2 main stage instances are open
+    public void testFX_OpenXZArchiveNewWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.xz")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.xz")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, true);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(2,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(2);
     }
 
     ////////////////////////////////////////////////////////////////////////////////
@@ -270,294 +353,393 @@ public class OpenArchiveTestFX extends AbstractPearlZipTestFX {
 
     @Test
     @DisplayName("Test: Open zip archive successfully (current window)")
-    public void testFX_OpenZipArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.zip")
+    // GIVEN zip archive (test.zip) is open in PearlZip by System menu
+    //      AND zip archive (test.zip) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenZipArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.zip")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.zip")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(), "The " +
-                                        "expected " +
-                                        "number of windows was " +
-                                        "not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open jar archive successfully (current window)")
-    public void testFX_OpenJarArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.jar")
+    // GIVEN zip archive (test.jar) is open in PearlZip by System menu
+    //      AND zip archive (test.jar) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenJarArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.jar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.jar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open 7z archive successfully (current window)")
-    public void testFX_Open7zArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.7z")
+    // GIVEN zip archive (test.7z) is open in PearlZip by System menu
+    //      AND zip archive (test.7z) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_Open7zArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.7z")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.7z")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open cab archive successfully (current window)")
-    public void testFX_OpenCabArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.cab")
+    // GIVEN zip archive (test.cab) is open in PearlZip by System menu
+    //      AND zip archive (test.cab) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenCabArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.cab")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.cab")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open iso archive successfully (current window)")
-    public void testFX_OpenIsoArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.iso")
+    // GIVEN zip archive (test.iso) is open in PearlZip by System menu
+    //      AND zip archive (test.iso) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenIsoArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.iso")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.iso")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open rar archive successfully (current window)")
-    public void testFX_OpenRarArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.iso")
+    // GIVEN zip archive (test.rar) is open in PearlZip by System menu
+    //      AND zip archive (test.rar) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenRarArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.rar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.rar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open tar archive successfully (current window)")
-    public void testFX_OpenTarArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar")
+    // GIVEN zip archive (test.tar) is open in PearlZip by System menu
+    //      AND zip archive (test.tar) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenTarArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open BZip archive successfully (current window)")
-    public void testFX_OpenBzipArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.bz2")
+    // GIVEN zip archive (test.tar.bz2) is open in PearlZip by System menu
+    //      AND zip archive (test.tar.bz2) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenBzipArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.bz2")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.bz2")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open GZip archive successfully (current window)")
-    public void testFX_OpenGzipArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.gz")
+    // GIVEN zip archive (test.tar.gz) is open in PearlZip by System menu
+    //      AND zip archive (test.tar.gz) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenGzipArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.gz")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.gz")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Open xz archive successfully (current window)")
-    public void testFX_OpenXZArchiveCurrentWindow_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.tar.xz")
+    // GIVEN zip archive (test.tar.xz) is open in PearlZip by System menu
+    //      AND zip archive (test.tar.xz) is open in PearlZip by Main window (current window)
+    // THEN ensure only 1 main stage instances are open
+    public void testFX_OpenXZArchiveCurrentWindow_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.tar.xz")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.tar.xz")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        // Via main window
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
+
+        // Given
         simOpenArchive(this, archivePath, true, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertEquals(1,
-                                Stage.getWindows().stream().map(Stage.class::cast).filter(s->s.getTitle() != null).filter(s->s.getTitle().contains(archivePath.getFileName().toString())).count(),
-                                "The expected number of windows was not open");
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // Then
+        PearlZipSpecifications.thenExpectNumberOfMainInstances(1);
     }
 
     @Test
     @DisplayName("Test: Opening the 5 files will update the recent files menu appropriately with new entries")
+    // GIVEN RECENT_FILE deleted
+    //      AND zip archive (test.zip) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.jar) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.tar) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.iso) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.cab) is open in PearlZip by System menu (in same window)
+    // THEN ensure the line count for file RECENT_FILE = 5
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.zip)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.jar)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.tar)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.iso)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.cab)
     public void testFX_OpenRecentFilesFirst5Files_MatchExpectations() throws IOException {
+        // Given
         final Path RECENT_FILE = InternalContextCache.GLOBAL_CONFIGURATION_CACHE.<Path>getAdditionalConfig(CK_RECENT_FILE)
-                                                                         .get();
+                                                                                .get();
         Files.deleteIfExists(RECENT_FILE);
-        int count = 0;
-        String[] extensions = {"zip","jar","tar","iso","cab"};
-        for (String extension : extensions) {
-            // Hard coded movement to open MenuItem
-            clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-            final Path archivePath = Paths.get("src", "test", "resources", String.format("test.%s", extension))
-                                          .toAbsolutePath();
-            // Via Sys menu
-            simOpenArchive(this, archivePath, false, false);
-            sleep(50, TimeUnit.MILLISECONDS);
-            count++;
 
-            Assertions.assertEquals(count, Files.lines(RECENT_FILE).count(),
-                                    "The number of entries in the rf file was not as expected");
-            Assertions.assertTrue(Files.lines(RECENT_FILE).anyMatch(f-> f.contains(Paths.get("src",
-                                                                                             "test",
-                                                                                             "resources", String.format("test.%s", extension))
-                                                                                      .toAbsolutePath().toString())),
-                                  "The expected file was not found in list");
+        for (String extension : Arrays.asList("zip", "jar", "tar", "iso", "cab")) {
+            final Path srcPath = Paths.get("src", "test", "resources", String.format("test.%s", extension))
+                                      .toAbsolutePath();
+            simOpenArchiveBySysMenu(this, srcPath, false);
+            sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
         }
+
+        // Then
+        thenExpectNumberLinesInFile(RECENT_FILE, 5);
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.zip");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.jar");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.tar");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.iso");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.cab");
     }
 
     @Test
     @DisplayName("Test: Opening the 6th file will update the recent files menu by overwriting the oldest entry")
+    // GIVEN RECENT_FILE deleted
+    //      AND zip archive (test.zip) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.jar) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.tar) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.iso) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.cab) is open in PearlZip by System menu (in same window)
+    //      AND zip archive (test.tar.gz) is open in PearlZip by System menu (in same window)
+    // THEN ensure the line count for file RECENT_FILE = 5
+    //      AND ensure the file RECENT_FILE does not contains line matching pattern (src/test/resources/test.zip)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.jar)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.tar)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.iso)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.cab)
+    //      AND ensure the file RECENT_FILE contains line matching pattern (src/test/resources/test.tar.gz)
     public void testFX_OpenRecentFilesSixthFileOverwrite_MatchExpectations() throws IOException {
-        Path RECENT_FILE =
-                InternalContextCache.GLOBAL_CONFIGURATION_CACHE.<Path>getAdditionalConfig(CK_RECENT_FILE).get();
+        // Given
+        final Path RECENT_FILE = InternalContextCache.GLOBAL_CONFIGURATION_CACHE.<Path>getAdditionalConfig(CK_RECENT_FILE)
+                                                                                .get();
         Files.deleteIfExists(RECENT_FILE);
-        int count = 0;
-        String[] extensions = {"zip","jar","tar","iso","cab","tar.gz"};
-        for (String extension : extensions) {
-            // Hard coded movement to open MenuItem
-            clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-            final Path archivePath = Paths.get("src", "test", "resources", String.format("test.%s", extension))
-                                          .toAbsolutePath();
-            // Via Sys menu
-            simOpenArchive(this, archivePath, false, false);
-            sleep(50, TimeUnit.MILLISECONDS);
-            count++;
 
-            Assertions.assertEquals(Math.min(5,count), Files.lines(RECENT_FILE).count(),
-                                    "The number of entries in the rf file was not as expected");
-            Assertions.assertTrue(Files.lines(RECENT_FILE).anyMatch(f-> f.contains(Paths.get("src", "test", "resources", String.format("test.%s", extension))
-                                                                                                     .toAbsolutePath().toString())),
-                                  "The expected file was not found in list");
+        for (String extension : Arrays.asList("zip", "jar", "tar", "iso", "cab", "tar.gz")) {
+            final Path srcPath = Paths.get("src", "test", "resources", String.format("test.%s", extension))
+                                      .toAbsolutePath();
+            simOpenArchiveBySysMenu(this, srcPath, false);
+            sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
         }
-        Assertions.assertTrue(Files.lines(RECENT_FILE).noneMatch(f-> f.contains(Paths.get("src", "test", "resources",
-                                                                                                       "test.zip")
-                                                                                                 .toAbsolutePath().toString())),
-                              "The file was found in list unexpectedly");
+
+        // Then
+        thenExpectNumberLinesInFile(RECENT_FILE, 5);
+        thenNotExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.zip");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.jar");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.tar");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.iso");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.cab");
+        thenExpectLinePatternInFile(RECENT_FILE, "src/test/resources/test.tar.gz");
     }
 
     @Test
     @DisplayName("Test: Open file in archive using OS defined software successfully")
-    public void testFX_OpenFileInArchiveExternally_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.zip")
+    // GIVEN zip archive (test.zip) is open in PearlZip by System menu
+    // WHEN select file (first-file)
+    // THEN a dialog appears with message like "^Choosing yes will open a temporary copy of the selected file in an external application.*"
+    public void testFX_OpenFileInArchiveExternally_Success() throws IOException {
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.zip")
+                                  .toAbsolutePath();
+        final Path archivePath = Paths.get(Files.createTempDirectory("pz").toAbsolutePath().toString(), "test.zip")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        Files.copy(srcPath, archivePath);
 
-        TableView<FileInfo> fileContentsView = lookup("#fileContentsView").queryAs(TableView.class);
-        TableRow<FileInfo> row = FormUtil.selectTableViewEntry(this, fileContentsView, FileInfo::getFileName,
-                                                               "first-file").get();
-        doubleClickOn(row);
-        DialogPane dialogPane = lookup(".dialog-pane").query();
-        Assertions.assertTrue(dialogPane.getContentText().startsWith("Choosing yes will open a temporary copy of the selected file in an external application"),
-                              "The text in confirmation dialog was not matched as expected");
+        simOpenArchiveBySysMenu(this, archivePath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // When
+        simTraversalArchive(this, archivePath.toString(), "#fileContentsView", (r)->{}, "first-file");
+        doubleClickOn(MouseButton.PRIMARY);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+
+        // Then
+        thenExpectDialogWithMatchingMessage(this, "^Choosing yes will open a temporary copy of the selected file in an external application.*");
     }
 
     ////////////////////////////////////////////////////////////////////////////////
@@ -566,85 +748,77 @@ public class OpenArchiveTestFX extends AbstractPearlZipTestFX {
 
     @Test
     @DisplayName("Test: Open zip archive and check ordering functionality of items in main screen")
+    // GIVEN zip archive (order-test.zip) is open in PearlZip by System menu
+    // WHEN select name header in main window
+    // THEN expect files in the following order (FILE-1,FILE-1.md5,nested-dir)
+    // WHEN select name header in main window
+    // THEN expect files in the following order (nested-dir,FILE-1.md5,FILE-1)
+    // WHEN select file (nested-dir/.DS_Store)
+    //     AND select size header in main window
+    // THEN expect files in the following order (nested-dir/FILE-2,nested-dir/FILE-3.md5,nested-dir/FILE-3,nested-dir/.DS_Store)
+    // WHEN select size header in main window
+    // THEN expect files in the following order (nested-dir/.DS_Store,nested-dir/FILE-3,nested-dir/FILE-3.md5,nested-dir/FILE-2)
+    // WHEN select modified header in main window
+    // THEN expect files in the following order (nested-dir/.DS_Store,nested-dir/FILE-2,nested-dir/FILE-3,nested-dir/FILE-3.md5)
+    // WHEN select modified header in main window
+    // THEN expect files in the following order (nested-dir/FILE-3.md5,nested-dir/FILE-3,nested-dir/FILE-2,nested-dir/.DS_Store)
     public void testFX_OpenZipArchiveCheckOrdering_Success() {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
+        // Given
         final Path archivePath = Paths.get("src", "test", "resources", "order-test.zip")
                                       .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        simOpenArchiveBySysMenu(this, archivePath, false);
 
-        // Select Name Header and check item order
-        TableView<FileInfo> fileContentsView = lookup("#fileContentsView").queryAs(TableView.class);
-        clickOn(new Point2D(350,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
+        // When
+        TableColumn<FileInfo,?> column = whenColumnExtractedFromTable(this, "#fileContentsView", "Name");
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
 
-        List<String> expectations = new LinkedList<>(List.of("FILE-1", "FILE-1.md5", "nested-dir"));
-        List<FileInfo> files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("FILE-1","FILE-1.md5","nested-dir"));
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
+        // When
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
 
-        clickOn(new Point2D(350,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
-        Collections.reverse(expectations);
-        files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("nested-dir","FILE-1.md5","FILE-1"));
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
 
+        // When
         simTraversalArchive(this, archivePath.toString(), "#fileContentsView", (r)->{}, "nested-dir",".DS_Store");
         sleep(250,TimeUnit.MILLISECONDS);
 
-        // Select Size and check item order
-        clickOn(new Point2D(525,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
-        expectations = new LinkedList<>(List.of("nested-dir/FILE-2", "nested-dir/FILE-3.md5", "nested-dir/FILE-3", "nested-dir/.DS_Store"));
-        files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
+        column = whenColumnExtractedFromTable(this, "#fileContentsView", "Size");
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("nested-dir/FILE-2","nested-dir/FILE-3.md5","nested-dir/FILE-3","nested-dir/.DS_Store"));
 
-        clickOn(new Point2D(525,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
-        Collections.reverse(expectations);
-        files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
+        // When
+        column = whenColumnExtractedFromTable(this, "#fileContentsView", "Size");
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("nested-dir/.DS_Store","nested-dir/FILE-3","nested-dir/FILE-3.md5","nested-dir/FILE-2"));
 
-        // Select Modified timestamp and check item order
-        clickOn(new Point2D(800,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
-        expectations = new LinkedList<>(List.of("nested-dir/.DS_Store", "nested-dir/FILE-2", "nested-dir/FILE-3",
-                                                "nested-dir/FILE-3.md5"));
-        files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
+        // When
+        column = whenColumnExtractedFromTable(this, "#fileContentsView", "Modified");
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
 
-        clickOn(new Point2D(800,225), MouseButton.PRIMARY).sleep(500, TimeUnit.MILLISECONDS);
-        Collections.reverse(expectations);
-        files = new ArrayList<>(fileContentsView.getItems());
-        Assertions.assertEquals(expectations.size(), files.size(), "The expected number of files was not retrieved");
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("nested-dir/.DS_Store","nested-dir/FILE-2","nested-dir/FILE-3","nested-dir/FILE-3.md5"));
 
-        for (int i = 0; i < expectations.size(); i++) {
-            Assertions.assertEquals(expectations.get(i), files.get(i).getFileName(),
-                                    String.format("Expectation: %s does not match: %s", expectations.get(i), files.get(i).getFileName()));
-        }
+        // When
+        column = whenColumnExtractedFromTable(this, "#fileContentsView", "Modified");
+        this.clickOn(column.getStyleableNode())
+            .sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+
+        // Then
+        PearlZipSpecifications.thenExpectFilesInOrderInCurrentWindow(archivePath.toString(), Arrays.asList("nested-dir/FILE-3.md5","nested-dir/FILE-3","nested-dir/FILE-2","nested-dir/.DS_Store"));
     }
 
     ////////////////////////////////////////////////////////////////////////////////
@@ -653,23 +827,23 @@ public class OpenArchiveTestFX extends AbstractPearlZipTestFX {
 
     @Test
     @DisplayName("Test: Save opened archive as another file with no extension will append extension automatically")
+    // GIVEN zip archive (test.zip) is open in PearlZip by System menu
+    // WHEN save archive as (test)
+    // THEN expect file (test.zip) exist in target location
     public void testFX_SaveOpenArchiveAs_NoExtension_Success() throws IOException {
-        // Hard coded movement to open MenuItem
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 80));
-        final Path archivePath = Paths.get("src", "test", "resources", "test.zip")
-                                      .toAbsolutePath();
-        // Via Sys menu
-        simOpenArchive(this, archivePath, false, false);
-        sleep(50, TimeUnit.MILLISECONDS);
-        Assertions.assertTrue(lookupArchiveInfo(archivePath.getFileName().toString()).isPresent(),"Expected archive " +
-                "was not present");
+        // Given
+        final Path srcPath = Paths.get("src", "test", "resources", "test.zip")
+                                  .toAbsolutePath();
 
-        // Save as...
-        clickOn(Point2D.ZERO.add(110, 10)).clickOn(Point2D.ZERO.add(110, 140));
+        simOpenArchiveBySysMenu(this, srcPath, false);
+        sleep(LONG_PAUSE, TimeUnit.MILLISECONDS);
+        Assertions.assertTrue(lookupArchiveInfo(srcPath.getFileName().toString()).isPresent(), "Expected archive was not present");
+
+        // When
         final Path tempDirectory = Files.createTempDirectory("pz");
-        chooseFile(PLATFORM, this,
-                   tempDirectory.resolve(archivePath.getFileName().toString().replace(".zip", "")));
-        Assertions.assertTrue(Files.exists(tempDirectory.resolve(archivePath.getFileName())),
-                              "Target archive was not created with an extension");
+        simSaveAsBySysMenu(this, tempDirectory.resolve("test"));
+
+        // Then
+        thenExpectFileExists(srcPath);
     }
 }
